--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+    <form method="POST" action="/lists/new">
+        <input id="id_new_item" name="item_text" placeholder="Enter a to-do item"/>
+        {% csrf_token %}
+    </form>
     <table id="id_list_table">
         {%  for item in items %}
             <tr><td>{{ forloop.counter }}: {{  item.text }}</td></tr>
